--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
 	}
 	img{
 		max-width: 100%;
-		vertical-align: top
+		vertical-align: top;
+	}
+	img#responsive{
+			display: none;
+		}
+	@media screen and (max-width: 768px){
+		img#responsive{
+			display: block;
+		}
 	}
 </style>
 </head>
 <body>
+	<img src="invie-responsive.png" id="responsive">
 	<img src="header.jpg">
 	<img src="hero.webp">
 	<img src="acustica.jpg">
-
 </body>
 </html>
