--- a/index.html
+++ b/index.html
@@ -22,8 +22,6 @@
 </head>
 <body>
 	<img src="invie-responsive.png" id="responsive">
-	<img src="header.jpg">
-	<img src="hero.webp">
-	<img src="acustica.jpg">
+	<img src="nueva-version.jpg">
 </body>
 </html>
